--- a/style.css
+++ b/style.css
@@ -1,10 +1,35 @@
-.texto
-    {  
-        background-color: rgba(0, 0, 0, 0.877);
-        text-align: center;
-    }
-.letra
+body
     {
-        background-color: rgb(248, 248, 255);
-        text-align: justify;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        background-size: auto;
+        background-image: url("fnd.jpeg");
+    }
+.box
+    {         
+        border-radius: 10px;
+        justify-content: center;
+        backdrop-filter: blur(10px);
+        background-color: rgba(53, 42, 42, 0.3);
+        width: 300px;
+        height: 500px;
+        margin: 30px;
+    }
+.botao
+    {
+        border-radius: 50px;
+        border: 2px;
+        margin: 10px;
+    }
+.botao button
+    {
+        background-color: rgb(47, 42, 53);
+        border-radius: 45px;
+        width: 100px;
+        height: 40px;
+        border-color: rgb(98, 112, 105);
+        border-style: hidden;
+        color: rgb(255, 255, 255);
     }
