--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body
         background-size: auto;
         background-image: url("fnd.jpeg");
     }
-.box
+.box1
     {         
         border: 2px solid grey;
         border-radius: 10px;
@@ -47,7 +47,7 @@ body
         height: 48px;
         font-size: 100%;
     }
-.box iframe
+.box1 iframe
     {
         width: 280px;
         margin: 10px 5px;
